--- a/treasure_map/templates/base.html
+++ b/treasure_map/templates/base.html
@@ -93,9 +93,10 @@ h1, h2, h3, h4 {
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia/map" onclick='loading();'>Philadelphia</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/boston/map" onclick='loading();'>Boston</a></li>
                     <li role="presentation" class="dropdown-header">USA No Coast</li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/atlanta/map" onclick='loading();'>Atlanta</a></l>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/austin/map" onclick='loading();'>Austin</a></l>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago/map" onclick='loading();'>Chicago</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix/map" onclick='loading();'>Phoenix</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/austin/map" onclick='loading();'>Austin</a></li>
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
@@ -116,9 +117,10 @@ h1, h2, h3, h4 {
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia" onclick='loading();'>Philadelphia</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/boston" onclick='loading();'>Boston</a></li>
                     <li role="presentation" class="dropdown-header">USA No Coast</li>
-                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago" onclick='loading();'>Chicago</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix" onclick='loading();'>Phoenix</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/austin" onclick='loading();'>Austin</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/atlanta" onclick='loading();'>Atlanta</a></l>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/austin" onclick='loading();'>Austin</a></l>
+                            <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago" onclick='loading();'>Chicago</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix" onclick='loading();'>Phoenix</a></li>
 
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco" onclick='loading();'>San Francisco</a></li>
@@ -166,7 +168,6 @@ h1, h2, h3, h4 {
     <div id='loading'><br><br><br><br><br><br><br>
         <img class="img-responsive center-block"
              src='/static/img/loading.gif' />
-        The DigitalOcean droplet on which this site is hosted, takes a long time to load the maps -- if it's taking too long, try loading fewer items try <pre>http://thetreasure.stream/newyork/map/3</pre>
     </div>
 
 
