--- a/treasure_map/templates/base.html
+++ b/treasure_map/templates/base.html
@@ -178,7 +178,7 @@ h1, h2, h3, h4 {
         <hr>
         {% block footer %}
         <footer class="footer">
-            <p>Treasure Map - <a href="another.workingagenda.com">Fenimore</a> | 2015-2016</p>
+            <p>Treasure Map - <a href="https://timenotclocks.com">Fenimore Love</a> | 2015-2020</p>
         </footer>
         {% endblock %}
     </div>
