--- a/treasure_map/templates/base.html
+++ b/treasure_map/templates/base.html
@@ -154,7 +154,7 @@ h1, h2, h3, h4 {
                     </select>
 
                   </div>
-                  <button type="submit" class="btn btn-success" onclick="loading()"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Current Location</button>
+                  <button type="submit" class="btn btn-success" onclick="loading()"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Search Address</button>
                 </form>
               </ul>
             </div><!-- /.navbar-collapse -->
