--- a/treasure_map/templates/base.html
+++ b/treasure_map/templates/base.html
@@ -131,7 +131,7 @@ h1, h2, h3, h4 {
                 </li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <form class="navbar-form navbar-left form-inline" role="search" action="{{ url_for('me')}}" method='post'>
+                <form class="navbar-form navbar-left form-inline" role="search" action="{{ url_for('search_address')}}" method='post'>
                   <div class="form-group">
                     <input type="text" name='address' class="form-control" placeholder="3635 Goutte d'Or, Montreal, Canada">
                   </div>
