--- a/treasure_map/templates/index.html
+++ b/treasure_map/templates/index.html
@@ -14,7 +14,7 @@
         <p>A map of <b>free stuff</b>.
         </p>
         <p>
-            With this treasure map, <b>compare craigslist
+            With this map, <b>compare craigslist
               free stuff postings by distance.</b>
         </p>
               <div class="dropdown">
@@ -38,7 +38,7 @@
                   <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago/map" onclick='loading();'>Chicago</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix/map" onclick='loading();'>Phoenix</a></li>
                   <li role="presentation" class="dropdown-header">USA West Coast</li>
-                  <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
+                  <li role="presentation"><a role="menuitem" tjabindex="-1" href="/losangeles/map" onclick='loading();'>Los Angeles</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/portland/map" onclick='loading();'>Portland</a></li>
                 </ul>
@@ -85,7 +85,7 @@
                 <hr>
                 <a id="disclaimer"></a>
                 <div class="panel panel-danger" style="font-family:monospace">
-                    <small>BEWARE OF EXCESSIVE ACCUMULATION.</small>
+                    <small>BEWARE EXCESSIVE ACCUMULATION.</small>
                 </div>
                 <div class="panel panel-warning" style="font-family:monospace">
                     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
@@ -96,8 +96,8 @@
                     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
                     THE SOFTWARE.
                 </div>
-                <h4>More</h4>
-                <p>Source code is <a href="https://github.com/fenimore/treasure-map">here</a>.</p>
+                <h4>Source Code:</h4>
+                <p>Source code is hosted on github <a href="https://github.com/fenimore/treasure_map">here</a>.</p>
   </div>
 </div>
 
