--- a/treasure_map/templates/map.html
+++ b/treasure_map/templates/map.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div id="map"> {% include 'raw_map.html' %}</div>
+<div id="map"> {% include raw_file %}</div>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 <link href='https://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
 <style>
