--- a/treasure_map/templates/base.html
+++ b/treasure_map/templates/base.html
@@ -122,9 +122,9 @@ h1, h2, h3, h4 {
                             <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago" onclick='loading();'>Chicago</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix" onclick='loading();'>Phoenix</a></li>
 
-                    <li role="presentation" class="dropdown-header">USA West Coast</li>
-                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco" onclick='loading();'>San Francisco</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle" onclick='loading();'>Seattle</a></li>
+                            <li role="presentation" class="dropdown-header">USA West Coast</li>
+                            <li role="presentation"><a role="menuitem" tjabindex="-1" href="/losangeles/map" onclick='loading();'>Los Angeles</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle" onclick='loading();'>Seattle</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/portland" onclick='loading();'>Portland</a></li>
 
                   </ul>
@@ -145,7 +145,7 @@ h1, h2, h3, h4 {
                       <option value="washingtondc">D.C.</option>
                       <option value="boston">Boston</option>
                       <option value="philadelphia">Philadelphia</option>
-                      <option value="sanfrancisco">San Francisco</option>
+                      <option value="losangeles">Los Angeles</option>
                       <option value="portland">Portland</option>
                       <option value="seattle">Seattle</option>
                       <option value="phoenix">Phoenix</option>
