--- a/treasure_map/templates/base.html
+++ b/treasure_map/templates/base.html
@@ -98,7 +98,7 @@ h1, h2, h3, h4 {
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago/map" onclick='loading();'>Chicago</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix/map" onclick='loading();'>Phoenix</a></li>
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
-                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
+                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/losangeles/map" onclick='loading();'>Los Angeles</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/portland/map" onclick='loading();'>Portland</a></li>
 
